# tunino

./: .gitignore  README.md  pyproject.toml
config/: settings.json
src/tunino/: app.py  config.py  test_gpio.py  test_rfid.py
